--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
-Flask==2.3.2
-flask-cors==3.1.13
-scikit-learn==1.2.2
-pandas==2.0.1
-numpy==1.23.5
+Flask
+Flask-Cors
+scikit-learn
+requests
+python-dotenv
+pandas # 모델 훈련(train_emotion_model.py) 시 필요
